# wasm_examples

./: README.md
add_export/host/: CMakeLists.txt  main.c
add_export/wasm/: add.c
add_import/host/: main.c
add_import/wasm/: add.c  build.sh
extern_ref/host/: CMakeLists.txt  main.c
extern_ref/wasm/: .gitignore  build.sh  extern_ref_example.c  wasm_linking.h
function_pointers/: .gitignore  build.sh  pointers_to_functions.c
shared_structures/bitfield/: test.c
shared_structures/crossplatformpointer/: crossplatformpointer.h
shared_structures/example/: build.sh  pointer.c  structure.c  wasm_build.sh
shared_structures/example/crossingboundary/: build.sh  crossingboundary.h  crossingboundary_native.c  crossingboundary_wasm.c  run.sh
shared_structures/example_structures/: example_data_structure.h
shared_structures/structure_description/: field_offset_calc.c  field_offset_calc.h
